@@ -1,13 +1,23 @@
+CONTRIBUTORS
+Changes
+INSTALL
+LICENSE
+MANIFEST
+META.json
+META.yml
+Makefile.PL
+README.md
+README.mkdn
+SIGNATURE
 benchmark.pl
 bin/mustache.pl
-Changes
+cpanfile
+dist.ini
+doap.xml
 lib/Template/Mustache.pm
-LICENSE
-Makefile.PL
-MANIFEST
-MYMETA.json
-MYMETA.yml
-README.md
+t/00-compile.t
+t/00-report-prereqs.dd
+t/00-report-prereqs.t
 t/001_spec_compatibility.t
 t/lambdas_receive_render_helper.t
 t/parse_errors.t
@@ -22,3 +32,5 @@ t/read_partials_from_subs.t
 t/read_templates_from_file_system.t
 t/read_templates_from_file_system_with_namespacing.t
 t/read_templates_from_subclass.t
+xt/release/pause-permissions.t
+xt/release/unused-vars.t
