@@ -1,0 +1,12 @@
+name    = Template-Mustache
+author  = Pieter van de Bruggen <pvande@cpan.org>
+author  = Yanick Champoux <yanick@cpan.org>
+author  = Ricardo Signes <rjbs@cpan.org>
+license = Perl_5
+copyright_holder = Pieter van de Bruggen 
+copyright_year   = 2011
+
+[@Filter]
+-bundle=@YANICK
+-remove=Covenant
+
