@@ -1,5 +1,9 @@
 Revision history for Template-Mustache
 
+{$NEXT}
+    [ DISTRIBUTION MAINTENANCE ]
+    - Maintenance passed to Yanick, github repo moved in consequence.
+
 v0.5.5 2016-11-13
      - Add Test::Exception as dependency.
 
